--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ h1 {
   align-items: center;
 }
 .footer {
-  border: 2px solid #099a09;
+  border-top: 2px solid #099a09;
   font-size: 2rem;
   padding: 2rem;
   background-color: #333;
@@ -166,7 +166,6 @@ h1 {
   background: linear-gradient( #c2c52d, 30%, #099a09, 60%, #c2c52d);
   background-clip: text;
 
-
 }
 
 
@@ -185,6 +184,55 @@ h1 {
   box-shadow: 0 0 10px black;
 
 }
+
+.slideshow {
+  /* border: 2px solid blue; */
+  width: 520px;
+  height: auto;
+  margin: 0% 10%;
+  font-size: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.slideImage {
+  width: 400px;
+  height: 400px;
+  border: 2px solid black;
+  border-radius: 10px;
+  box-shadow: 0 0 10px black;
+}
+.buttons {
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+button {
+  font-size: 18px;
+  z-index: 5;
+  width: 70px;
+  aspect-ratio: 1;
+  background-color: #2935bc;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  color: white;
+  border: 2px solid #5aafe4;
+
+}
+button:hover {
+  background-color: #24243e;
+}
+
+.hidden {
+  display: none;
+}
+
 
 
 
