--- a/src/App.css
+++ b/src/App.css
@@ -4,239 +4,126 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-    width: 100vw;
-    height: 100vh;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0;
+:root {
+  --s: 36px;
+  /* control the size*/
+  --c1: #444444;
+  --c2: #606060;
+
+  --c: #0000 75%, var(--c1) 0;
+  --g1: conic-gradient(at calc(200%/3) 10%, var(--c));
+  --g2: conic-gradient(at 10% calc(200%/3), var(--c));
 }
 
-@font-face {
-  font-family: wildGrowth;
-  src: url(./fonts/WildGrowth.ttf);
-}
-.wildGrowth {
-  font-family: wildGrowth;
-}
+
 
 .stingrayScenics {
-  color: white;
-
-  height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  perspective: 10px;
-}
-
-.parallax {
-  font-family: wildGrowth;
-
-  position: relative;
+  border: 2px solid black;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  transform-style: preserve-3d;
-  z-index: -1;
-  /* border: 2px solid yellow; */
+  flex-flow: column nowrap;
+  width: 100dvw;
 }
 
-.background,
-.foreground {
-  position: absolute;
-  height: 100%;
+.navigation {
+  border: 2px solid black;
+  background-color: white;
+  height: 8dvh;
   width: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.background {
-  transform: translateZ(-10px) scale(2);
-  /* border: 2px solid magenta; */
-}
-
-.foreground {
-  transform: translateZ(-5px) scale(1.5);
-  right: -5%;
-}
-.logo {
-  /* border: 2px solid yellow; */
-  width: 50%;
-  height: auto;
+  padding: 0 3dvh;
+  top: 0;
+  display: flex;
+  flex-flow: row nowrap;
+  position: fixed;
+  z-index: 15;
 }
 
 .title {
   font-family: wildGrowth;
-  width: 97%;
-  margin-top: 5%;
-  position: absolute;
-  color: white;
-  text-align: center;
-  overflow: visible;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 20px;
-}
-h1 {
-  /* border: 2px solid gold; */
-  padding: 3%;
-  font-size: 8rem;
-  z-index: 15;
-  letter-spacing: 12px;
-
-  /* text gradient */
-  color: transparent;
-  -webkit-text-stroke-color: black;
-  -webkit-text-stroke-width: 1px;
-  background: linear-gradient( #c2c52d, 30%, #099a09, 60%, #c2c52d);
-  background-clip: text;
-}
-.sceneTitle {
-  position: relative;
-  left: 5%;
-  padding-bottom: 110px;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 3.5dvh;
+  margin: 0.5dvh auto 0 4dvh;
 }
 
-
-.intro {
-  border: 2px solid grey;
-  border-radius: 10px;
-  margin: 0% 10%;
-  padding: 20px 10px;
-  text-align: center;
-  font-size: 2rem;
-  /* padding: 2rem; */
-  background-color: #333333aa;
-  color: white;
-  width: 600px;
-
-
+.navOptions {
   display: flex;
-  flex-direction: column;
+  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  gap: 40px;
-}
-.bodyOne {
-  border: 2px solid #099a09;
-  margin: 0% 10%;
-  font-size: 2rem;
-  padding: 2rem;
-  background-color: #333;
-  color: white;
-  width: 65%;
-}
-.modelDisplay {
-  /* border: 2px solid #099a09; */
-  margin: 0% 10%;
-  font-size: 2rem;
-  /* padding: 2rem; */
-  /* background-color: #333; */
-  color: white;
-  width: 65%;
-  width: 650px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-.footer {
-  border-top: 2px solid #099a09;
-  font-size: 2rem;
-  padding: 2rem;
-  background-color: #333;
-  color: white;
+  gap: 2dvh;
 }
 
-.normalDiv {
-  /* border: 2px solid gold; */
-  position: relative;
-  right: 25%;
-  margin: 0;
-  font-size: 5rem;
-  padding: 10px 10px 90px 85px;
-  letter-spacing: 8px;
-
-  color: transparent;
-  -webkit-text-stroke-color: black;
-  -webkit-text-stroke-width: 1px;
-  background: linear-gradient( #c2c52d, 30%, #099a09, 60%, #c2c52d);
-  background-clip: text;
-
+/* Parallax background image */
+.bannerImage {
+  height: 50dvh;
+  width: 100%;
+  object-fit: cover;
+  position: fixed;
+  top: 0;
+  z-index: 0;
+  filter: grayscale(90%);
+  transform: translateY(0);
+  /* Start position for parallax */
+  transition: transform 0.1s ease-out;
+  /* Smooths the transform updates */
 }
 
-
-.introPhoto {
-  width: 300px;
-  height: auto;
-  border: 2px solid black;
-  border-radius: 10px;
-}
-.modelPhoto {
-  width: 300px;
-  height: auto;
-  border: 2px solid black;
-  border-radius: 10px;
-  margin: 8px;
-  box-shadow: 0 0 10px black;
-
+@font-face {
+  font-family: wildGrowth;
+  src: url('./fonts/WildGrowth.ttf')
 }
 
-.slideshow {
-  /* border: 2px solid blue; */
-  width: 520px;
-  height: auto;
-  margin: 0% 10%;
-  font-size: 2rem;
+.scrollContent {
+  border: 2px solid gold;
+  background-color: #464646;
+  background:
+    var(--g1), var(--g2),
+    var(--g1) var(--s) var(--s),
+    var(--g2) var(--s) var(--s),
+    var(--g1) calc(2*var(--s)) calc(2*var(--s)),
+    var(--g2) calc(2*var(--s)) calc(2*var(--s)) var(--c2);
+  background-size: calc(3*var(--s)) calc(3*var(--s));
+  color: whitesmoke;
+  z-index: 10;
+  margin-top: 50dvh;
+}
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-.slideImage {
-  width: 400px;
-  height: 400px;
-  border: 2px solid black;
-  border-radius: 10px;
-  box-shadow: 0 0 10px black;
-}
-.buttons {
-  /* border: 2px solid green; */
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-}
-button {
-  font-size: 18px;
+.stingrayIcon {
+  height: 30dvh;
+  width: 30dvh;
+  margin-top: -15dvh;
+  margin-bottom: -15dvh;
   z-index: 5;
-  width: 70px;
-  aspect-ratio: 1;
-  background-color: #2935bc;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  color: white;
-  border: 2px solid #5aafe4;
-
-}
-button:hover {
-  background-color: #24243e;
 }
 
-.hidden {
-  display: none;
+.introduction {
+  border: 2px solid red;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 40dvh;
 }
 
+.scenicOptions {
+  border: 2px solid green;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
 
+.scenicItem {
+  border: 2px solid blue;
+  width: 50%;
+  height: 35dvh;
+}
 
-
-
-
-
-
+.copyright {
+  height: 20dvh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
