--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-:root {
-  --s: 36px;
-  /* control the size*/
-  --c1: #444444;
-  --c2: #606060;
-
-  --c: #0000 75%, var(--c1) 0;
-  --g1: conic-gradient(at calc(200%/3) 10%, var(--c));
-  --g2: conic-gradient(at 10% calc(200%/3), var(--c));
+html {
+  scroll-behavior: smooth;
 }
 
+:root {
 
+}
+
+/* .appContainer {
+  border: 2px solid orangered;
+  width: 100dvw;
+  height: 100dvh;
+  overflow-y: scroll;
+} */
 
 .stingrayScenics {
   border: 2px solid black;
@@ -64,9 +65,8 @@
   z-index: 0;
   filter: grayscale(90%);
   transform: translateY(0);
-  /* Start position for parallax */
+  /* Start position for parallax and smooths transform */
   transition: transform 0.1s ease-out;
-  /* Smooths the transform updates */
 }
 
 @font-face {
@@ -75,15 +75,8 @@
 }
 
 .scrollContent {
-  border: 2px solid gold;
+  /* border: 2px solid gold; */
   background-color: #464646;
-  background:
-    var(--g1), var(--g2),
-    var(--g1) var(--s) var(--s),
-    var(--g2) var(--s) var(--s),
-    var(--g1) calc(2*var(--s)) calc(2*var(--s)),
-    var(--g2) calc(2*var(--s)) calc(2*var(--s)) var(--c2);
-  background-size: calc(3*var(--s)) calc(3*var(--s));
   color: whitesmoke;
   z-index: 10;
   margin-top: 50dvh;
@@ -95,6 +88,10 @@
   margin-top: -15dvh;
   margin-bottom: -15dvh;
   z-index: 5;
+  transform: translateY(0);
+  will-change: transform;
+  /* Start position for parallax */
+  transition: transform 0.1s ease-out;
 }
 
 .introduction {
@@ -104,15 +101,48 @@
   justify-content: center;
   align-items: center;
   height: 40dvh;
+  transform: translateY(0);
+  /* Start position for parallax */
+  transition: transform 0.1s ease-out;
 }
 
+
+.scenicContainer {
+  border: 2px solid gold;
+  height: 100dvh;
+  width: 100%;
+  margin-top: 10dvh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  /* overflow-y: scroll; */
+}
 .scenicOptions {
-  border: 2px solid green;
+  border: 2px solid red;
+  height: 200dvh;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  gap: 5dvh;
+  z-index: 10;
+
 }
+
+.oneRing {
+  border: 2px solid magenta;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
 
 .scenicItem {
   border: 2px solid blue;
@@ -121,9 +151,11 @@
 }
 
 .copyright {
-  height: 20dvh;
+  height: 80dvh;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
 }
+
+
