--- a/src/App.css
+++ b/src/App.css
@@ -11,22 +11,22 @@ html {
 
 }
 
-/* .appContainer {
-  border: 2px solid orangered;
+.appContainer {
+  /* border: 2px solid orangered; */
   width: 100dvw;
   height: 100dvh;
   overflow-y: scroll;
-} */
+}
 
 .stingrayScenics {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   display: flex;
   flex-flow: column nowrap;
   width: 100dvw;
 }
 
 .navigation {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   background-color: white;
   height: 8dvh;
   width: 100%;
@@ -57,7 +57,7 @@ html {
 
 /* Parallax background image */
 .bannerImage {
-  height: 50dvh;
+  height: 45dvh;
   width: 100%;
   object-fit: cover;
   position: fixed;
@@ -76,10 +76,10 @@ html {
 
 .scrollContent {
   /* border: 2px solid gold; */
-  background-color: #464646;
+  background-color: #2c2626;
   color: whitesmoke;
   z-index: 10;
-  margin-top: 50dvh;
+  margin-top: 45dvh;
 }
 
 .stingrayIcon {
@@ -95,7 +95,7 @@ html {
 }
 
 .introduction {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -107,20 +107,8 @@ html {
 }
 
 
-.scenicContainer {
-  border: 2px solid gold;
-  height: 100dvh;
-  width: 100%;
-  margin-top: 10dvh;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  /* overflow-y: scroll; */
-}
 .scenicOptions {
-  border: 2px solid red;
-  height: 200dvh;
+  /* border: 2px solid red; */
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -132,7 +120,7 @@ html {
 }
 
 .oneRing {
-  border: 2px solid magenta;
+  /* border: 2px solid magenta; */
   object-fit: contain;
   width: 100%;
   height: 100%;
@@ -140,6 +128,7 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  /* animation: ringRotate 10s infinite; */
 }
 
 
@@ -151,11 +140,19 @@ html {
 }
 
 .copyright {
-  height: 80dvh;
+  /* height: 10dvh; */
+  background-color: ghostwhite;
+  margin-top: 40dvh;
+  height: 15dvh;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  z-index: 10;
+}
+
+.mordor {
+  width: 100%;
 }
 
 
