--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,8 @@ html {
 }
 
 :root {
+  background-color: #2c2626;
 
-}
-
-.appContainer {
-  /* border: 2px solid orangered; */
-  width: 100dvw;
-  height: 100dvh;
-  overflow-y: scroll;
 }
 
 .stingrayScenics {
@@ -23,6 +17,7 @@ html {
   display: flex;
   flex-flow: column nowrap;
   width: 100dvw;
+  overflow: hidden;
 }
 
 .navigation {
@@ -57,7 +52,7 @@ html {
 
 /* Parallax background image */
 .bannerImage {
-  height: 45dvh;
+  height: 40dvh;
   width: 100%;
   object-fit: cover;
   position: fixed;
@@ -75,11 +70,12 @@ html {
 }
 
 .scrollContent {
-  /* border: 2px solid gold; */
+  border: 2px solid gold;
   background-color: #2c2626;
   color: whitesmoke;
   z-index: 10;
-  margin-top: 45dvh;
+  margin-top: 40dvh;
+  padding-bottom: 5dvh;
 }
 
 .stingrayIcon {
@@ -95,7 +91,7 @@ html {
 }
 
 .introduction {
-  /* border: 2px solid red; */
+  border: 2px solid red;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -108,24 +104,23 @@ html {
 
 
 .scenicOptions {
-  /* border: 2px solid red; */
+  border: 2px solid green;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: center;
-  gap: 5dvh;
+  gap: 10dvh;
   z-index: 10;
-
 }
 
 .oneRing {
   /* border: 2px solid magenta; */
   object-fit: contain;
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   position: fixed;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   /* animation: ringRotate 10s infinite; */
@@ -140,19 +135,18 @@ html {
 }
 
 .copyright {
-  /* height: 10dvh; */
-  background-color: ghostwhite;
+  background-color: #2c2626;
   margin-top: 40dvh;
-  height: 15dvh;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 5;
 }
 
 .mordor {
   width: 100%;
+  background-color: #2c2626;
 }
 
 
