--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+*, *::after, *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,8 +9,18 @@ html {
 
 :root {
   background-color: #2c2626;
+  
+  --bar-width: 60px;
+  --bar-height: 8px;
+  --hamburger-gap: 6px;
+  --foreground: #333;
+  --background: white;
+  --animation-timing: 300ms ease-in-out;
+  --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2)
 
 }
+
+/* Mobile 425 - 430 width! */
 
 .stingrayScenics {
   /* border: 2px solid black; */
@@ -20,35 +30,8 @@ html {
   overflow: hidden;
 }
 
-.navigation {
-  /* border: 2px solid black; */
-  background-color: white;
-  height: 8dvh;
-  width: 100%;
-  padding: 0 3dvh;
-  top: 0;
-  display: flex;
-  flex-flow: row nowrap;
-  position: fixed;
-  z-index: 15;
-}
 
-.title {
-  font-family: wildGrowth;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 3.5dvh;
-  margin: 0.5dvh auto 0 4dvh;
-}
 
-.navOptions {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  gap: 2dvh;
-}
 
 /* Parallax background image */
 .bannerImage {
@@ -73,25 +56,35 @@ html {
   border: 2px solid gold;
   background-color: #2c2626;
   color: whitesmoke;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
   z-index: 10;
   margin-top: 40dvh;
   padding-bottom: 5dvh;
 }
 
 .stingrayIcon {
-  height: 30dvh;
-  width: 30dvh;
-  margin-top: -15dvh;
-  margin-bottom: -15dvh;
+  height: 20dvh;
+  width: 20dvh;
+  /* border: 2px solid magenta; */
+  margin: -10dvh 0 -10dvh 2dvh;
   z-index: 5;
   transform: translateY(0);
   will-change: transform;
   /* Start position for parallax */
   transition: transform 0.1s ease-out;
+  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 1))
+  drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.5))
+  drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.3));
+
+
 }
 
 .introduction {
   border: 2px solid red;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -129,9 +122,23 @@ html {
 
 
 .scenicItem {
-  border: 2px solid blue;
-  width: 50%;
+  /* border: 2px solid blue; */
+  width: 70%;
   height: 35dvh;
+  position: relative;
+}
+.scenicItem h1 {
+  background-color: grey;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  text-align: center;
+}
+
+.linkIcon {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .copyright {
