--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@ html {
 
 }
 
+@font-face {
+  font-family: wildGrowth;
+  src: url('./fonts/WildGrowth.ttf')
+}
+
+
 /* Mobile 425 - 430 width! */
 
 .stingrayScenics {
@@ -27,11 +33,27 @@ html {
   display: flex;
   flex-flow: column nowrap;
   width: 100dvw;
-  overflow: hidden;
 }
 
 
 
+
+
+
+
+
+
+.oneRing {
+  /* border: 2px solid magenta; */
+  object-fit: contain;
+  width: 95%;
+  height: 95%;
+  position: fixed;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* animation: ringRotate 10s infinite; */
+}
 
 /* Parallax background image */
 .bannerImage {
@@ -45,11 +67,6 @@ html {
   transform: translateY(0);
   /* Start position for parallax and smooths transform */
   transition: transform 0.1s ease-out;
-}
-
-@font-face {
-  font-family: wildGrowth;
-  src: url('./fonts/WildGrowth.ttf')
 }
 
 .scrollContent {
@@ -107,39 +124,47 @@ html {
   z-index: 10;
 }
 
-.oneRing {
-  /* border: 2px solid magenta; */
-  object-fit: contain;
-  width: 95%;
-  height: 95%;
-  position: fixed;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* animation: ringRotate 10s infinite; */
-}
-
-
-
 .scenicItem {
   /* border: 2px solid blue; */
   width: 70%;
   height: 35dvh;
   position: relative;
+  border-radius: 10px;
+  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6); */
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
 }
 .scenicItem h1 {
-  background-color: grey;
+  background-color: rgba(255, 255, 255, 0.792);
+  color: black;
   width: 100%;
   position: absolute;
-  top: 0;
+  top: 30px;
+  /* left: -10px; */
   text-align: center;
+  z-index: 1;
+  /* transform: rotate(-2deg); */
 }
 
 .linkIcon {
   object-fit: cover;
+  position: absolute;
   width: 100%;
   height: 100%;
+  /* border-radius: 10px; */
+  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6); */
+  /* transform: translateZ(0); */
+  transition: transform 0.3s ease;
+  /* perspective: 1000px; */
+  z-index: 0;
 }
+.scenicItem:hover .linkIcon {
+  transform: scale(1.05) rotateX(5deg) rotateY(-5deg);
+}
+
+
+
+
 
 .copyright {
   background-color: #2c2626;
@@ -156,4 +181,112 @@ html {
   background-color: #2c2626;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+/* Miniatures Page */
+
+
+
+
+
+.swipingCards {
+  border: 2px solid blue;
+  margin-top: 40dvh;
+  height: 60dvh;
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.modelSlider {
+  border: 2px solid grey;
+  width: 100%;
+  height: 25dvh;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  margin-bottom: -15dvh;
+  z-index: 50;
+}
+.sliderDiv {
+  border: 2px solid purple;
+  width: 100%;
+  height: 20dvh;
+  /* margin: 0 15dvh; */
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sliderPhoto {
+  border: 2px solid white;
+  object-fit: cover;
+  width: 20dvh;
+  height: 20dvh;
+}
+
+
+
+
+
+
+.flippyCard {
+  border: 2px solid red;
+  background-color: white;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  perspective: 1000px;
+}
+
+.flippyCardInner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: transform 750ms; /* Smooth flip transition */
+  transform-style: preserve-3d;
+} 
+
+.cardFront,
+.cardBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.cardFront {
+  background-color: blue;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(0deg);
+}
+.cardBack {
+  background-color: greenyellow;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(180deg);
+}
 
