--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,10 @@ html {
   /* border: 2px solid black; */
   display: flex;
   flex-flow: column nowrap;
+  /* justify-content: center; */
+  align-items: center;
   width: 100dvw;
 }
-
 
 
 
@@ -73,6 +74,7 @@ html {
   border: 2px solid gold;
   background-color: #2c2626;
   color: whitesmoke;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -195,98 +197,54 @@ html {
 
 /* Miniatures Page */
 
-
-
-
-
-.swipingCards {
-  border: 2px solid blue;
-  margin-top: 40dvh;
-  height: 60dvh;
+.miniPreviewSection {
+  border: 2px solid white;
+  margin-top: 45dvh;
   width: 100%;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5dvh;
+}
+
+.miniPreview {
+  border: 2px solid lime;
+  width: 93%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  gap: 2dvh;
 }
 
-
-
-.modelSlider {
+.miniModelDisplay {
   border: 2px solid grey;
-  width: 100%;
-  height: 25dvh;
+  height: 35dvh;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  margin-bottom: -15dvh;
-  z-index: 50;
-}
-.sliderDiv {
-  border: 2px solid purple;
-  width: 100%;
-  height: 20dvh;
-  /* margin: 0 15dvh; */
-  flex-shrink: 0;
-  scroll-snap-align: center;
-  display: flex;
   justify-content: center;
   align-items: center;
+  gap: 1.5dvh;
 }
-.sliderPhoto {
-  border: 2px solid white;
+
+.miniModelSlice {
+  border: 1px solid rgba(255, 255, 255, 0.531);
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+  height: 100%;
+  flex: 1;
+  transition: flex 0.5s ease;
+}
+.modelFocus {
+  flex: 5;
+}
+
+.miniModelPhoto {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  width: 20dvh;
-  height: 20dvh;
-}
-
-
-
-
-
-
-.flippyCard {
-  border: 2px solid red;
-  background-color: white;
-  width: 50%;
-  height: 50%;
-  position: relative;
-  perspective: 1000px;
-}
-
-.flippyCardInner {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: transform 750ms; /* Smooth flip transition */
-  transform-style: preserve-3d;
-} 
-
-.cardFront,
-.cardBack {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-.cardFront {
-  background-color: blue;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: rotateY(0deg);
-}
-.cardBack {
-  background-color: greenyellow;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: rotateY(180deg);
 }
 
