--- a/src/App.css
+++ b/src/App.css
@@ -29,19 +29,14 @@ html {
 /* Mobile 425 - 430 width! */
 
 .stingrayScenics {
-  /* border: 2px solid black; */
+  /* border: 2px solid magenta; */
+  width: 100dvw;
+  height: 100dvh;
   display: flex;
   flex-flow: column nowrap;
   /* justify-content: center; */
   align-items: center;
-  width: 100dvw;
 }
-
-
-
-
-
-
 
 
 .oneRing {
@@ -197,54 +192,4 @@ html {
 
 /* Miniatures Page */
 
-.miniPreviewSection {
-  border: 2px solid white;
-  margin-top: 45dvh;
-  width: 100%;
-
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 5dvh;
-}
-
-.miniPreview {
-  border: 2px solid lime;
-  width: 93%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  gap: 2dvh;
-}
-
-.miniModelDisplay {
-  border: 2px solid grey;
-  height: 35dvh;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5dvh;
-}
-
-.miniModelSlice {
-  border: 1px solid rgba(255, 255, 255, 0.531);
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
-  height: 100%;
-  flex: 1;
-  transition: flex 0.5s ease;
-}
-.modelFocus {
-  flex: 5;
-}
-
-.miniModelPhoto {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
