--- a/src/pages/miniGallery/miniatures.css
+++ b/src/pages/miniGallery/miniatures.css
@@ -1,41 +1,39 @@
 .miniatureGallery {
     border: 2px solid ghostwhite;
-    width: 100dvw;
-    height: 100dvh;
+    width: 100%;
+    /* width: 100dvw;
+    height: 100dvh; */
     position: relative;
-    overflow: scroll;
+    /* overflow-y: scroll; */
 }
 
-.miniRainContainer {
+.logoContainer {
     border: 2px solid magenta;
-    height: 200dvh;
     width: 100%;
     position: relative;
 }
+ 
+.featureElement {
+    background-color: black;
+    height: 100dvh;
+    position: sticky;
+    top: 0;
+    background-image: url(../../images/oneRing.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.doubleElement {
+    background-color: black;
+    height: 100dvh;
+    position: sticky;
+    top: 0;
+    background-image: url(../../images/oneRing.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
-.miniatureRain {
+.emptyElement {
     border: 2px solid blue;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
+    height: 70dvh;
 }
-
-.miniRainDrop {
-    border: 2px solid green;
-    /* width: 20dvh;
-    height: 20dvh; */
-    /* position: absolute;
-    top: 0; */
-    will-change: transform;
-    transition: transform 0.75s ease-out;
-}
-
-.imageDrop {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
 
