--- a/src/pages/miniGallery/miniatures.css
+++ b/src/pages/miniGallery/miniatures.css
@@ -18,7 +18,7 @@
     height: 100dvh;
     position: sticky;
     top: 0;
-    background-image: url(../../images/empireLogo.png);
+    background-image: url(../../images/oneRing.png);
     background-position: center;
     background-repeat: no-repeat;
 }
