--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,12 @@ html {
   --foreground: #333;
   --background: white;
   --animation-timing: 300ms ease-in-out;
-  --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2)
+  --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
 
+
+  /* layout variables */
+  --nav-height: 8dvh;
+  --background: #001400;
 }
 
 @font-face {
