--- a/src/pages/demoPage/demoPage.css
+++ b/src/pages/demoPage/demoPage.css
@@ -65,7 +65,12 @@
 
 .demoParallax {
     border: 2px solid lime;
-    position: relative
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 .demoLaxImage {
     border: 2px solid white;
@@ -73,5 +78,6 @@
     height: 10dvh;
     object-fit: cover;
     position: relative;
+    margin: -20px;
 }
 
