nav bar menu work

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ html {
 }
 
 :root {
-  background-color: #2c2626;
   
   --bar-width: 60px;
   --bar-height: 8px;
@@ -22,6 +21,8 @@ html {
   /* layout variables */
   --nav-height: 8dvh;
   --background: #001400;
+  background-color: var(--background);
+
 }
 
 @font-face {
@@ -41,159 +42,3 @@ html {
   /* justify-content: center; */
   align-items: center;
 }
-
-
-.oneRing {
-  /* border: 2px solid magenta; */
-  object-fit: contain;
-  width: 95%;
-  height: 95%;
-  position: fixed;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* animation: ringRotate 10s infinite; */
-}
-
-/* Parallax background image */
-.bannerImage {
-  height: 40dvh;
-  width: 100%;
-  object-fit: cover;
-  position: fixed;
-  top: 0;
-  z-index: 0;
-  filter: grayscale(90%);
-  transform: translateY(0);
-  /* Start position for parallax and smooths transform */
-  transition: transform 0.1s ease-out;
-}
-
-.scrollContent {
-  border: 2px solid gold;
-  background-color: #2c2626;
-  color: whitesmoke;
-  width: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: flex-start;
-  z-index: 10;
-  margin-top: 40dvh;
-  padding-bottom: 5dvh;
-}
-
-.stingrayIcon {
-  height: 20dvh;
-  width: 20dvh;
-  /* border: 2px solid magenta; */
-  margin: -10dvh 0 -10dvh 2dvh;
-  z-index: 5;
-  transform: translateY(0);
-  will-change: transform;
-  /* Start position for parallax */
-  transition: transform 0.1s ease-out;
-  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 1))
-  drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.5))
-  drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.3));
-
-
-}
-
-.introduction {
-  border: 2px solid red;
-  width: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  height: 40dvh;
-  transform: translateY(0);
-  /* Start position for parallax */
-  transition: transform 0.1s ease-out;
-}
-
-
-.scenicOptions {
-  border: 2px solid green;
-  width: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10dvh;
-  z-index: 10;
-}
-
-.scenicItem {
-  /* border: 2px solid blue; */
-  width: 70%;
-  height: 35dvh;
-  position: relative;
-  border-radius: 10px;
-  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6); */
-  overflow: hidden;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
-}
-.scenicItem h1 {
-  background-color: rgba(255, 255, 255, 0.792);
-  color: black;
-  width: 100%;
-  position: absolute;
-  top: 30px;
-  /* left: -10px; */
-  text-align: center;
-  z-index: 1;
-  /* transform: rotate(-2deg); */
-}
-
-.linkIcon {
-  object-fit: cover;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  /* border-radius: 10px; */
-  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6); */
-  /* transform: translateZ(0); */
-  transition: transform 0.3s ease;
-  /* perspective: 1000px; */
-  z-index: 0;
-}
-.scenicItem:hover .linkIcon {
-  transform: scale(1.05) rotateX(5deg) rotateY(-5deg);
-}
-
-
-
-
-
-.copyright {
-  background-color: #2c2626;
-  margin-top: 40dvh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  z-index: 5;
-}
-
-.mordor {
-  width: 100%;
-  background-color: #2c2626;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Miniatures Page */
-
-
