--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -4,7 +4,6 @@
     height: 100dvh;
     display: block;
     overflow-y: scroll;
-
 }
 
 .bannerDisplay {
@@ -28,23 +27,37 @@
 
 
 
-
-.sectionTitle {
-    border: 2px solid red;
-    color: black;
-    position: sticky;
-    top: 0;
-}
 .modelSection {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 100%;
     height: 200dvh;
+    position: relative;
 }
+
+.sectionTitle {
+    /* border: 2px solid teal; */
+    height: 10dvh;
+    color: white;
+    position: absolute;
+    top: 0;
+}
+.blueSquare {
+    background-color: blue;
+    width: 100%;
+    height: 10dvh;
+    position: absolute;
+    top: 0;
+}
+
+
+
+
 .coverPhoto {
     border: 2px solid white;
     width: 100%;
     height: 50dvh;
     object-fit: cover;
     transform-origin: bottom;
+    margin-top: 5dvh;
 }
 
