--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -13,13 +13,13 @@
 
 .bannerImage {
     width: 100%;
-    height: 50dvh;
+    height: 40dvh;
     object-fit: cover;
     position: relative;
 }
 
 .homeHeader {
-    /* border: 2px solid orangered; */
+    border: 2px solid orangered;
     height: 50dvh;
     position: relative;
     /* background-color: var(--background); */
@@ -32,8 +32,8 @@
 .websiteTitle {
     /* border: 2px solid pink; */
     width: 100%;
-    padding: 0% 5%;
-    margin-top: -10dvh;
+    padding: 0% 2.5%;
+    margin-top: -14dvh;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -46,37 +46,40 @@
     flex-flow: row nowrap;
     align-items: center;
     /* font-family: wildGrowth; */
-    /* perspective: 1000px; */
+    perspective: 1000px;
 }
 .titleStingray {
     justify-content: flex-start;
 }
 .titleScenics {
     justify-content: flex-end;
+    margin-top: -2dvh;
 }
 
 .sectionTitle {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     /* display: flex; */
     /* justify-content: flex-start; */
     /* align-items: center; */
-    /* transform-style: preserve-3d; */
+    transform-style: preserve-3d;
 }
 
 .titleCharacter {
-    border: 2px solid grey;
+    /* border: 2px solid grey; */
     display: inline-block;
     /* transform: rotateY(0deg); */
     /* transition: transform 0.3s ease, color 0.3s ease; */
+    transition: color 0.3s ease;
 }
 
 /* Add 3D rotation effect when hovering over the title */
 .titleCharacter:hover {
     /* transform: rotateY(360deg); */
-    /* color: #92d003; */
+    color: #92d003;
 }
 .titleCharacter {
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
+    text-shadow: 4px 4px 15px rgba(0, 0, 0, 0.5);
+    /* -webkit-text-stroke: 1px green; */
 }
 
 
