--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@ html {
 :root {
   
   --bar-width: 50px;
-  --bar-height: 6px;
-  --hamburger-gap: 6px;
+  --bar-height: 4px;
+  --hamburger-gap: 8px;
   --foreground: #333;
   --animation-timing: 300ms ease-in-out;
   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
@@ -19,7 +19,7 @@ html {
 
   /* layout variables */
   --nav-height: 6dvh;
-  --background: #001400;
+  --background: #0e1400;
   background-color: var(--background);
 
 }
