--- a/src/components/navigationBar/navBar.css
+++ b/src/components/navigationBar/navBar.css
@@ -1,17 +1,16 @@
 .navigation {
-  background-color: white;
+  background-color: #ffffff55;
   border: 2px solid blue;
-  height: var(--nav-height);
-  height: 50px;
-  width: 100%;
-  padding: 0 2dvh;
-  top: 0;
+  border-radius: 50%;
+
+  width: 10dvh;
+  height: 9.5dvh;
+  top: 1dvh;
+  right: 1dvh;
   display: flex;
-  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
   position: fixed;
-  /* position: sticky; */
   z-index: 30;
 }
 
@@ -26,8 +25,8 @@
 
 .stingrayLogo {
   /* border: 2px solid red; */
-  width: 10dvh;
-  height: 10dvh;
+  width: 7.5dvh;
+  height: 7.5dvh;
   position: fixed;
   top: 1.5dvh;
   left: 1.5dvh;
@@ -67,7 +66,7 @@
   border-radius: 10px;
   width: var(--bar-width);
   height: var(--bar-height);
-  transform-origin: left center;
+  transform-origin: center center;
   transition:
     opacity var(--animation-timing),
     width var(--animation-timing),
@@ -75,22 +74,31 @@
     rotate var(--animation-timing);
 }
 
+.navButton.open {
+  rotate: 82deg;
+  /* width: var(--x-width); */
+  /* translate: 0 calc(var(--bar-height) / 2); */
+  translate: -3px 2px;
+  /* transform-origin: center center; */
+}
 .menuLabel.open::after {
-  rotate: -45deg;
-  width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / 2)
+  rotate: -50deg;
+  width: 38px;
+  /* translate: 0px calc(var(--bar-height) / 2) */
+  translate: 8px -15px;
 }
 
 .menuLabel.open::before {
-  rotate: 45deg;
-  width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / -2)
+  rotate: -53deg;
+  width: 25px;
+  /* translate: 0 calc(var(--bar-height) / -2) */
+  translate: 12px -5px
 }
 
-.navButton.open {
+/* .navButton.open {
   opacity: 0;
   width: 0;
-}
+} */
 
 
 
@@ -106,7 +114,7 @@
 .sidebar {
   position: fixed;
   border: 2px solid red;
-  top: var(--nav-height);
+  top: 15dvh;
   right: 0;
   translate: 15%;
   transition: translate var(--animation-timing), opacity var(--animation-timing);
