--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -4,6 +4,7 @@
     height: 100dvh;
     display: block;
     overflow-y: scroll;
+    /* background-color: blue; */
 }
 
 .bannerDisplay {
@@ -44,7 +45,8 @@
 .titleStingray,
 .titleScenics {
     /* border: 2px solid lime; */
-    font-size: 8dvw;
+    /* font-size: 8dvw; */
+    font-size: 40px;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -89,7 +91,7 @@
 
 .tinyWorlds {
     border: 2px solid yellow;
-    height: 2000px;
+    height: 1800px;
     position: relative;
     /* display: flex; */
     /* align-items: center; */
@@ -106,6 +108,7 @@
     text-align: center;
     font-size: 72px;
     background: -webkit-linear-gradient(#eee, #333);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     /* position: absolute;
@@ -134,6 +137,60 @@
     height: 225px;
     object-fit: cover;
 }
+
+
+
+
+/* Miniature Section */
+
+.miniatureSection {
+    border: 2px solid purple;
+    width: 100%;
+    height: 2000px;
+    /* background-color: #1a0c0c; */
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    
+}
+.titleMiniatures {
+    border: 2px solid purple;
+    position: sticky;
+    top: 100px;
+}
+.titleMiniatures h1 {
+    text-align: center;
+    font-size: 72px;
+    /* background: -webkit-linear-gradient(#eee, #333); */
+    /* background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+    /* position: absolute;
+    left: 50%;
+    top: 50%; */
+    /* transform: translate(-50%, -50%); */
+    width: 100%;
+    height: 100px;
+}
+
+
+.homeMiniDisplay {
+    border: 2px solid red;
+    height: 500px;   
+    width: 90%;
+    /* width: 500px;  */
+    position: sticky;
+    top: 200px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 
 
 
