--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ html {
   /* layout variables */
   --nav-height: 6dvh;
   --background: #0e1400;
-  /* background-color: var(--background); */
+  background-color: var(--background);
 
 }
 
@@ -46,11 +46,6 @@ html {
 
 
 
-.stingrayContainer {
-  border: 2px solid yellow;
-  width: 30dvh;
-  height: 30dvh;
-}
 
 
 
