--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -4,8 +4,13 @@
     height: 100dvh;
     display: block;
     overflow-y: scroll;
+    /* position: relative; */
     /* background-color: blue; */
 }
+
+
+
+/* moving images */
 
 .displayContainer {
     border: 2px solid white;
@@ -19,6 +24,8 @@
     height: 100dvh;
     position: sticky;
     top: 0;
+
+    /* transform: translateY(-30%); */
 }
 
 .displayImages {
@@ -26,7 +33,6 @@
     display: flex;
     flex-flow: column wrap;
     height: 40dvh;
-
     margin: 1dvh;
     position: relative;
 }
