--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -8,9 +8,24 @@
     /* background-color: blue; */
 }
 
+/* title components */
+.websiteTitle {
+    border: 2px solid pink;
+    height: 120px;
+    font-size: 10dvw;
+    /* position: absolute; */
+    /* top: 4dvh;
+    left: 18dvw; */
+    z-index: 10;
 
+    /* font-family: wildGrowth; */
+    /* margin-top: 14dvh; */
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    /* align-items: center; */
+}
 
-/* moving images */
 
 .displayContainer {
     border: 2px solid white;
@@ -24,186 +39,65 @@
     height: 100dvh;
     position: sticky;
     top: 0;
-
-    /* transform: translateY(-30%); */
 }
-
-.displayImages {
-    border: 2px solid lime;
-    display: flex;
-    flex-flow: column wrap;
-    height: 40dvh;
-    margin: 1dvh;
-    position: relative;
-}
-
-.dImage1,
-.dImage2,
-.dImage3,
-.dImage4,
-.dImage5 {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.dImage1 {
-    border: 2px solid red;
-}
-
-.dImage2 {
-    border: 2px solid blue;
-}
-.dImage3 {
-    border: 2px solid teal;
-}
-.dImage4 {
-    border: 2px solid green;
-}
-.dImage5 {
-    border: 2px solid purple;
-}
-
-.box {
-    border: 2px solid blue;
-    height: 100%;
-    flex: 0 0 100%;
-}
-
-.smallDiv {
-    border: 2px solid orange;
-    font-size: 35px;
-    /* position: absolute; */
-    /* bottom: 0; */
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
-    letter-spacing: 5px;
-}
-.bigDiv {
-    border: 2px solid green;
-    font-size: 60px;
-    position: absolute; 
-    left: 50%; 
-    top: 50%;
-    transform: translate(-50%, -50%);
-    writing-mode: vertical-rl; 
-    text-orientation: upright; 
-}
-.figureDiv {
-    border: 2px solid gold;
-    position: absolute;
-    top: 0;
-    transform: rotate(-180deg);
-    font-size: 35px;
-    letter-spacing: 5px;
-}
-
-.heroImage {
-    /* border: 2px solid white; */
+.homeImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.bannerScroll {
-    border: 2px solid white;
-    width: 100%;
-    height: 200px;
+.displayBox {
+    /* border: 2px solid green; */
+    width: 80dvw;
+    height: 80dvh;
+    border-radius: 40px;
+    box-shadow: 0px 5px 25px black;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -47%);
+
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+
+    /* glass morphism */
+    background-color: transparent;
+    backdrop-filter: blur(3px);
+    background-image: linear-gradient(
+        150deg,
+        rgba(255, 255, 255, 0.3),
+        rgba(0, 0, 0, 0.3)
+    );
+    /* background-size: 30px; */
 }
 
-.banner {
-    border: 2px solid gold;
-    width: 100%;
+.dividedBox {
+    border: 2px solid orangered;
     flex: 1;
-    font-size: 55px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.tinySwap {
-    border: 2px solid grey;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    width: 150px;
-    overflow: hidden;
-}
-
-.wordSwap {
-    border: 2px solid blue;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 0 0 100%;
 }
 
+.displayInsideOne {
+    border: 2px solid gold;
+    position: absolute;
+    top: 5%;
+    left: 2.5%;
+    height: 90%;
+    width: 50%;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* title components */
-.websiteTitle {
-    /* border: 2px solid pink; */
-    width: 100%;
-    padding: 0% 2.5%;
-    /* margin-top: -14dvh; */
-    display: flex;
-    flex-flow: column nowrap;
-    font-size: 30px;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    height: 100px;
+}
+.displayInsideTwo {
+    border: 2px solid purple;
+    position: absolute;
+    top: 5%;
+    right: 2.5%;
+    width: 50%;
+    height: 90%;
 }
 
-.titleStingray {
-    justify-content: flex-start;
-}
-
-.titleScenics {
-    justify-content: flex-end;
-    margin-top: -2dvh;
-}
-
-.sectionTitle {
-    transform-style: preserve-3d;
-}
-
-.titleCharacter {
-    /* border: 2px solid grey; */
-    display: inline-block;
-    /* transform: rotateY(0deg); */
-    /* transition: transform 0.3s ease, color 0.3s ease; */
-    transition: color 0.3s ease;
-}
-
-/* Add 3D rotation effect when hovering over the title */
-.titleCharacter:hover {
-    /* transform: rotateY(360deg); */
-    color: #92d003;
-}
-
-.titleCharacter {
-    text-shadow: 4px 4px 15px rgba(0, 0, 0, 0.5);
-    /* -webkit-text-stroke: 1px green; */
-}
