--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -44,6 +44,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 20px;
 }
 
 .displayBox {
@@ -51,7 +52,7 @@
     width: 80dvw;
     height: 80dvh;
     border-radius: 40px;
-    box-shadow: 0px 5px 25px black;
+    box-shadow: 0px 5px 30px black;
 
     position: absolute;
     top: 50%;
@@ -81,6 +82,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .displayInsideOne {
@@ -88,16 +90,16 @@
     position: absolute;
     top: 5%;
     left: 2.5%;
-    height: 90%;
-    width: 50%;
+    height: 50%;
+    width: 90%;
 
 }
 .displayInsideTwo {
     border: 2px solid purple;
     position: absolute;
-    top: 5%;
+    bottom: 5%;
     right: 2.5%;
-    width: 50%;
-    height: 90%;
+    width: 90%;
+    height: 50%;
 }
 
