--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,10 @@ html {
   align-items: center;
   color: white;
 
-  background-image: url('../src/images/mountains.jpg');
+  /* background-image: url('../src/images/mountains.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
 }
 
 
